Fix checkbox alignment

--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -1,19 +1,15 @@
 .container {
-  display: block;
+  display: inline-block;
   position: relative;
   padding-left: 35px;
   cursor: pointer;
   font-size: 19px;
 
   &.checkbox-small {
-    height: 16px;
-    width: 16px;
     font-size: 15px;
   }
 
   &.checkbox-large {
-    height: 25px;
-    width: 25px;
     font-size: 22px;
   }
 }
@@ -26,12 +22,13 @@
   width: 0;
 }
 
-.checkmark {
+.checkmark-container {
   position: absolute;
-  top: 0;
+  top: 50%;
   left: 0;
   height: 20px;
   width: 20px;
+  transform: translateY(-50%);
   background-color: #eee;
   border-radius: 4px;
   border: 1px solid rgba(154, 159, 179, 0.8);
@@ -47,14 +44,23 @@
     width: 16px;
     font-size: 15px;
   }
+
+  .checkmark {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 18px;
+    height: 18px;
+  }
 }
 
-.container:hover input ~ .checkmark {
+.container:hover input ~ .checkmark-container {
   background-color: #ccc;
   border: 1.5px solid rgba(101, 108, 133, 0.8);
 }
 
-.container input:checked ~ .checkmark {
+.container input:checked ~ .checkmark-container {
   background-color: rgba(81, 165, 177, 0.8);
 
   &.checkbox-green {
@@ -63,44 +69,6 @@
 
   &.checkbox-pink {
     background-color: rgba(177, 81, 131, 0.8);
-  }
-}
-
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-.container input:checked ~ .checkmark:after {
-  display: block;
-}
-
-.container {
-  .checkmark {
-    &::after {
-      left: 7px;
-      top: 3px;
-      width: 5px;
-      height: 8px;
-      border: solid white;
-      border-width: 0 3px 3px 0;
-      transform: rotate(45deg);
-    }
-
-    &.checkbox-small::after {
-      left: 6px;
-      top: 2px;
-      width: 3px;
-      height: 6px;
-    }
-
-    &.checkbox-large::after {
-      left: 9px;
-      top: 5px;
-      width: 5px;
-      height: 10px;
-    }
   }
 }
 
